--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.0.0
   firebase_storage: ^11.0.1
   fluttertoast: ^8.1.1
+  firebase_database: ^10.0.2
 
 dev_dependencies:
   flutter_test:
