--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_storage: ^11.0.1
   fluttertoast: ^8.1.1
   firebase_database: ^10.0.2
+  cloud_firestore: ^4.0.2
 
 dev_dependencies:
   flutter_test:
