addded code to choose and show image in upload container

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.authentication_firebase">
     <uses-permission android:name="android.permission.INTERNET"/> <!-- Add this -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/> <!-- Add this -->
    <application
         android:label="authentication_firebase"
         android:name="${applicationName}"
