--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fluttertoast: ^8.1.1
   firebase_database: ^10.0.2
   cloud_firestore: ^4.0.2
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
